[gd_scene load_steps=3 format=3 uid="uid://bipk5vipaeiva"]

[ext_resource type="Script" uid="uid://ddxu7xuqawykl" path="res://end_screen.gd" id="1"]
[ext_resource type="FontFile" uid="uid://qai12svbvyg7" path="res://assets/PressStart2P.ttf" id="2_abjgy"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -121.0
offset_right = 128.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_abjgy")
text = "abc!
Koin Diperoleh: "
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = 5.0
offset_right = 32.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_abjgy")
text = "Restart"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.5
offset_top = 46.5
offset_right = 54.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_abjgy")
text = "Menu Utama"

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = 5.0
offset_right = 132.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_abjgy")
text = "Level Berikutnya"

[node name="ShopButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 259.0
offset_top = 199.0
offset_right = 349.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_abjgy")
text = "Shop"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
